--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>{{title}}</title>
-  {{>fileLinks}}
+  <title>Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- <script src="/js/app.js" defer></script> -->
 </head>
 <body>
-  {{>header}}
+  <header>
+    <h1 id="brand-name">Astro</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="help.html">Help</a>
+    </nav>
+  </header>
 
   <div class="container">
     <section class="main-section">
@@ -60,8 +68,5 @@
 
     </section>
   </div>
-    
-
-  {{!-- {{>footer}} --}}
 </body>
 </html>
