--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 <body>
   <header>
     <h1 id="brand-name">Astro</h1>
-    <nav>
+    <nav id="navBar">
+      
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="help.html">Help</a>
+      
+      <div class="toggleBars">
+
+        <a href="#" class="toggle">
+          <span class="bar1"></span>
+          <span class="bar2"></span>
+          <span class="bar3"></span>
+        </a>
+
+      </div>
     </nav>
   </header>
 
