--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1 id="brand-name">Astro</h1>
     <nav id="navBar">
       
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="help.html">Help</a>
-      
+      <span class="navLinks">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="help.html">Help</a>
+      </span>
       <div class="toggleBars">
 
         <a href="#" class="toggle">
